# fshell

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  NEWS  NOTICE  README  README.build-env  THANKS  TODO  configure.ac  doxygen.cfg.in  model.am  performance.am
MiniSat-p_v1.14/: File.C  Global.h  Main.C  Makefile  Solver.C  Solver.h  SolverTypes.h
benchmarks/: Makefile  README
benchmarks/code/: Makefile  PapaBench-0.4.patch  README  ase-examples.tar.bz2  basic.tar.bz2  busybox-1.14.0.patch  engine-controllers.patch  engine-controllers.tar.bz2  joplift.patch  joplift.tar.bz2  maelardalen.tar.bz2  memory-manager.tar.bz2  nt-drivers.patch  nt-drivers.tar.bz2  picosat-913.patch  sorting.tar.bz2  vfs-model.patch  vfs-model.tar.bz2
benchmarks/conf/: PapaBench-0.4_autopilot_BB  PapaBench-0.4_autopilot_C1  PapaBench-0.4_autopilot_C2  PapaBench-0.4_autopilot_C3  PapaBench-0.4_autopilot_C4  PapaBench-0.4_autopilot_C5  PapaBench-0.4_autopilot_C6  PapaBench-0.4_fly-by-wire_BB  ase-examples_list2.c_Q1  ase-examples_list2.c_Q15  ase-examples_list2.c_Q18  ase-examples_list2.c_Q19  ase-examples_list2.c_Q2  ase-examples_list2.c_Q20  ase-examples_list2.c_Q3  ase-examples_list2.c_Q6  ase-examples_list2.c_Q7  ase-examples_list2.c_Q8  ase-examples_list2.c_Q9  basic_bitops_1  (+93 more)
config/: create_file.sh  make_ast_classes.sh  make_visitor.sh  runtest.sh  update-makefiles.pl  y2l  y2l-postproc.pl
fshell2/: Makefile.am
fshell2/command/: Makefile.am  command_processing.cpp  command_processing.hpp  command_processing.t.cpp  lexer.ll  parser.yy
fshell2/config/: Makefile.am  annotations.hpp  config.hpp
fshell2/exception/: Makefile.am  base_exception.cpp  base_exception.hpp  command_processing_error.cpp  command_processing_error.hpp  fshell2_error.cpp  fshell2_error.hpp  instrumentation_error.cpp  instrumentation_error.hpp  macro_processing_error.cpp  macro_processing_error.hpp  query_processing_error.cpp  query_processing_error.hpp
fshell2/fql/: Makefile.am
fshell2/fql/ast/: Makefile.am  abstraction.cpp  abstraction.hpp  ast_visitor.cpp  ast_visitor.hpp  coverage_pattern_expr.cpp  coverage_pattern_expr.hpp  cp_alternative.cpp  cp_alternative.hpp  cp_concat.cpp  cp_concat.hpp  depcov.cpp  depcov.hpp  ecp_atom.cpp  ecp_atom.hpp  edgecov.cpp  edgecov.hpp  filter.cpp  filter.hpp  filter_complement.cpp  filter_complement.hpp  filter_compose.cpp  filter_compose.hpp  filter_enclosing_scopes.cpp  filter_enclosing_scopes.hpp  filter_expr.cpp  filter_expr.hpp  filter_function.cpp  filter_function.hpp  filter_intersection.cpp  filter_intersection.hpp  filter_setminus.cpp  filter_setminus.hpp  filter_union.cpp  filter_union.hpp  fql_ast_printer.cpp  fql_ast_printer.hpp  fql_ast_printer.t.cpp  fql_node.cpp  fql_node.hpp  (+63 more)
fshell2/fql/concepts/: Makefile.am  cfa.cpp  cfa.hpp  cfa.t.cpp  path_predicate.cpp  path_predicate.hpp  path_set_predicate.cpp  path_set_predicate.hpp  state_predicate.cpp  state_predicate.hpp  target_graph.hpp  test_goal.hpp  trace_automaton.cpp  trace_automaton.hpp  trace_automaton.t.cpp
fshell2/fql/evaluation/: Makefile.am  automaton_inserter.cpp  automaton_inserter.hpp  automaton_inserter.t.cpp  build_test_goal_automaton.cpp  build_test_goal_automaton.hpp  build_test_goal_automaton.t.cpp  cfa.cpp  cfa.hpp  cfa.t.cpp  compute_test_goals.cpp  compute_test_goals.hpp  compute_test_goals.t.cpp  evaluate_coverage_pattern.cpp  evaluate_coverage_pattern.hpp  evaluate_coverage_pattern.t.cpp  evaluate_filter.cpp  evaluate_filter.hpp  evaluate_filter.t.cpp  evaluate_path_monitor.cpp  evaluate_path_monitor.hpp  evaluate_path_monitor.t.cpp  evaluate_path_pattern.cpp  evaluate_path_pattern.hpp  evaluate_path_pattern.t.cpp  predicate_instrumentation.cpp  predicate_instrumentation.hpp  predicate_instrumentation.t.cpp
fshell2/fql/normalize/: Makefile.am  normalization_visitor.cpp  normalization_visitor.hpp  normalization_visitor.t.cpp
fshell2/fql/parser/: Makefile.am  lexer.ll  lexer.txt  parser.yy  query_parser.cpp  query_parser.hpp  query_parser.t.cpp  query_processing.cpp  query_processing.hpp  query_processing.t.cpp
fshell2/instrumentation/: Makefile.am  cfg.cpp  cfg.hpp  goto_lt_compare.cpp  goto_lt_compare.hpp  goto_lt_compare.t.cpp  goto_transformation.cpp  goto_transformation.hpp  goto_transformation.t.cpp  goto_utils.cpp  goto_utils.hpp
fshell2/macro/: Makefile.am  macro_processing.cpp  macro_processing.hpp  macro_processing.t.cpp
fshell2/main/: Makefile.am  fshell2.cpp  fshell2.hpp  fshell2.t.cpp  main.cpp  parseoptions.cpp  parseoptions.hpp
fshell2/tc_generation/: Makefile.am  constraint_strengthening.cpp  constraint_strengthening.hpp  constraint_strengthening.t.cpp  test_suite_minimization.cpp  test_suite_minimization.hpp  test_suite_minimization.t.cpp  test_suite_output.cpp  test_suite_output.hpp  test_suite_output.t.cpp
fshell2/util/: Makefile.am  smart_printer.cpp  smart_printer.hpp  statistics.cpp  statistics.hpp  statistics.t.cpp
linenoise/: Makefile  VERSION  linenoise.c  linenoise.h
m4/: ac_archive.m4  ax_boost_base.m4  ax_boost_serialization.m4  ax_llvm.m4  model.m4
minisat-2.2.0/: Makefile
src/: Makefile  config.inc
test/: Makefile.am  check_files  config.hpp
test/basic/: boolop-control-flow1.c  boolop-control-flow2.c  cov-union.c  globals.c  labels.c  minimal.c  repeat.c  simple-control-flow.c  undefined-func.c  variables.c
test/benchmarks/: AL_expanded_mod.c  all_experiments.sh  kbfiltr.i.cil.c
test/benchmarks/busybox-1.14.0/: .config  .fshell2_history
test/benchmarks/busybox-1.14.0/coreutils/: .test_ptr_hack.o.cmd  id.c
test/benchmarks/busybox-1.14.0/include/: autoconf.h  bbconfigopts.h  libbb.h  usage_compressed.h
test/benchmarks/memman/: .cproject  .project  main.c  tco.h
test/benchmarks/memman/inc/: defs.h  mblock.h  mman.h  mpool.h  types.h
test/benchmarks/memman/inc/intern/: environment.h  module_config.h
test/benchmarks/memman/src/: mblock.c  mman.c  mpool.c
test/benchmarks/vfs-examples/: .fshell2_history  pseudo_cd.c  pseudo_creat.c  pseudo_main.c  pseudo_misc.c  pseudo_mkdir.c  pseudo_rename.c  pseudo_rmdir.c  pseudo_unlink.c
(+15 files in other folders)
